--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = bf102d9
+	base = c40cf87
 	trimbase = 
 	parent = release/kinetic/ros_ethercat_eml
-	previous = 
+	previous = bf102d9
