--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 47f94c2
+	base = d2ab685
 	trimbase = 
 	parent = debian/kinetic/ros_ethercat_eml
-	previous = 
+	previous = 47f94c2
