--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b25753b
+	base = 4d9fe77
 	trimbase = 
 	parent = release/melodic/ros_ethercat_eml
-	previous = 
+	previous = b25753b
