--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4d41627
+	base = d46869e
 	trimbase = 
 	parent = debian/melodic/ros_ethercat_eml
-	previous = 
+	previous = 4d41627
