--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4d78e8
+	base = 5042ada
 	trimbase = 
 	parent = debian/melodic/ros_ethercat_eml
-	previous = 
+	previous = a4d78e8
