--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/noetic/ros_ethercat_eml
-	previous = 
-	base = 633a6e0
+	previous = 633a6e0
+	base = f6f4e51
 	trim = 
 	trimbase = 
