--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/ros_ethercat_eml
-	previous = 
-	base = 212556a
+	previous = 212556a
+	base = 10cd341
 	trim = 
 	trimbase = 
