--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/noetic/ros_ethercat_eml
-	previous = 
-	base = ec8b31b
+	previous = ec8b31b
+	base = e7ff619
 	trim = 
 	trimbase = 
